--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-svg": "^16.1.34",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
