--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@svgr/cli": "^8.1.0",
+    "css-loader": "^7.0.0",
+    "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
+    "rimraf": "^5.0.5",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@types/node": "^20",
@@ -32,7 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "husky": "^8.0.0",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
